apps/platform-system/istio/manifests/istio-gateway-external.referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: istio-gateway-external
  namespace: platform-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: media
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: home-automation
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: edge-services
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ops
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: platform-system
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway-external
