apps/platform-system/istio/manifests/istio-gateway.gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: platform-system
  annotations:
    external-dns.kubernetes.io/target: 192.168.1.241
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-parameters
  listeners:
    - name: http
      hostname: "*.edgard.org"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http-root
      hostname: edgard.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.edgard.org"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: gateway-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-root
      hostname: edgard.org
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: gateway-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
