apps/platform-system/istio/manifests/istio-gateway-root-redirect.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-gateway-root-redirect
  namespace: platform-system
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway-external
      namespace: platform-system
      sectionName: https-root
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway-internal
      namespace: platform-system
      sectionName: https-root
  hostnames:
    - edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: www.edgard.org
            statusCode: 301
